[package]
name = "rust_tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = "0.1.4"
etherparse = "0.15.0"
bitflags = "2.6.0"
nix = { version = "0.29.0", features = ["poll"] }

[lib]
name = "ruts_tcp"

[[bin]]
name = "rust_tcp"
